adding universal funcs

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Answer to the Ultimate Question of Life, the Universe, and Everything</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="/lib/utilitas/utilitas.lite.mjs"></script>
+    <script src="/lib/webjam/universal.mjs"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css" />
     <link rel="stylesheet" href="/asset/default.css" />
 </head>
