--- a/public/404.html
+++ b/public/404.html
@@ -6,6 +6,7 @@
     <title>404 Not Found</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="/lib/utilitas/utilitas.lite.mjs"></script>
+    <script src="/lib/webjam/universal.mjs"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css" />
     <link rel="stylesheet" href="/asset/default.css" />
 </head>
